# StarRustDesk

./: .gitignore  DEVECO_CLI.md  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  obfuscation-rules.txt  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/core/: audio_player.cpp  audio_player.h  config.cpp  config.h  connection.cpp  connection.h  file_transfer.cpp  file_transfer.h  h264_decoder.cpp  h264_decoder.h  rustdesk_ffi.h  service.cpp  service.h  video_render.cpp  video_render.h  vp9_decoder.cpp  vp9_decoder.h  xcomponent_render.cpp  xcomponent_render.h
entry/src/main/cpp/crypto/: aead.cpp  aead.h  chacha20.cpp  chacha20.h  encrypted_stream.cpp  encrypted_stream.h  poly1305.cpp  poly1305.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: ConnectionModel.ets  PeerModel.ets  ServerConfigModel.ets  ServerModel.ets  SettingsModel.ets
entry/src/main/ets/pages/: ConnectionPage.ets  FileManagerPage.ets  HomePage.ets  PrivacyPolicyPage.ets  RemotePage.ets  ScanPage.ets  ServerPage.ets  SettingsPage.ets  TerminalPage.ets
entry/src/main/ets/service/: ConnectionService.ets  CredentialStore.ets  RustDeskNapi.ets  ServerService.ets
entry/src/main/ets/theme/: RustDeskTheme.ets
entry/src/main/ets/utils/: Constants.ets  I18n.ets  PrivacyPolicy.ets
entry/src/main/ets/widget/: ServerConfigDialog.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: backup_config.json  main_pages.json
entry/src/main/rust/: Cargo.toml
entry/src/main/rust/.cargo/: config.toml
entry/src/main/rust/src/: lib.rs
tools/: deveco.ps1
