[package]
name = "rustdesk_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustdesk_core"
crate-type = ["staticlib"]

[dependencies]
hbb_common = { path = "vendor/hbb_common" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
log = "0.4"
protobuf = "3"

[patch.crates-io]
machine-uid = { path = "vendor/machine_uid" }

[profile.release]
opt-level = "z"
lto = true
strip = true
